fixed layout issue in footer

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -13,7 +13,7 @@
 }
 
 .footer {
-  padding: 2em 0;
+  padding: 4em 0;
   // position: fixed;
   // z-index: -100;
   // bottom: 0;
@@ -47,7 +47,8 @@
 }
 
 .footer__inner {
-  display: flex;
+  text-align: center;
+  // display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
